# sample-blog-page

./: Cargo.toml  Rocket.toml
src/: main.rs  model.rs
static/: index.html
static/css/: summernote.css
static/js/: summernote-ja-JP.js
templates/: about.html.tera  contact.html.tera  create.html.tera  index.html.tera  login.html.tera  navbar-loggedin.html.tera  navbar.html.tera  post.html.tera  register.html.tera
